--- a/homegear/config.json
+++ b/homegear/config.json
@@ -7,7 +7,7 @@
   "startup": "before",
   "boot": "auto",
   "host_network": true,
-  "arch": ["armhf"],
+  "arch": ["amd64"],
   "privileged": [
     "SYS_ADMIN",
     "SYS_RAWIO"
