--- a/homegear/config.json
+++ b/homegear/config.json
@@ -7,13 +7,18 @@
   "startup": "before",
   "boot": "auto",
   "host_network": true,
-  "arch": ["amd64"],
+  "arch": ["armv7", "aarch64" ,"armhf", "amd64", "i386"],
+  "auto_uart": true,
+  "gpio": true,
   "privileged": [
     "SYS_ADMIN",
     "SYS_RAWIO"
   ],
   "map": ["config:rw", "share:rw"],
   "ports": {
+    "2001": 2001,
+    "2002": 2002,
+    "2003": 2003
   },
   "environment": {
   },
